# eixo5_grupo1_20242

./: .gitignore  .pre-commit-config.yaml  README.md
ask_your_data/: README.md  anotações.txt  app.py  app2.py  docker-compose.yml  pyproject.toml  test.py
ask_your_data/.streamlit/: config.toml
ask_your_data/assets/txt/: Procedimento Interno da Empresa COMPANY X.txt
ask_your_data/docs/: 1_documentacao_contexto.md  2_coleta_dados.md  3_pre_processamento.md  4_aprendizado_maquina_rev.md  5_analise_resultados.md  6_otimizacao.md  aprendizagem_maquina.md  comparacao_modelos_embeddings.md  documentacao_contexto.md  documentacao_modelo_testado.md  instalacao.md  langchain.md  metricas.md
ask_your_data/process_langchain/: embedding.py  retrieval_qa.py
ask_your_data/process_qdrant/: manager.py
ask_your_data/qdrant_storage/: raft_state.json
ask_your_data/qdrant_storage/collections/openai_collection/0/: replica_state.json
ask_your_data/qdrant_storage/collections/openai_collection/0/segments/0e50a0ea-5882-412b-b2c1-518da5d176c3/: 000021.sst  000022.sst  000023.sst  000024.sst  IDENTITY  LOG  MANIFEST-000017  segment.json
ask_your_data/qdrant_storage/collections/openai_collection/0/segments/34eac6a8-1add-4f44-8603-ffa4a8a20d0e/: IDENTITY  LOG
ask_your_data/qdrant_storage/collections/openai_collection/0/segments/373232c2-912d-4d68-99c4-1065df81f4a7/: 000017.sst  000018.sst  000019.sst  000020.sst  000028.sst  000029.sst  000030.sst  000031.sst  000033.sst  000034.sst  000035.sst  000036.sst  IDENTITY  (+4 more)
ask_your_data/utils/: extract_data_pdf.py  text_processing.py
(+92 files in other folders)
