[tool.poetry]
name = "ask-your-data"
version = "0.1.0"
description = ""
authors = ["Edvaldo Gutierres <edvaldo_gutierres@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.8.0"
qdrant-client = "^1.11.1"
langchain-community = "^0.2.13"
python-dotenv = "^1.0.1"
openai = "^1.42.0"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.23"
pymupdf = "^1.24.9"
streamlit = "^1.38.0"
streamlit-chat = "^0.1.1"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
